--- a/catalog-item.html
+++ b/catalog-item.html
@@ -76,6 +76,136 @@
             </div>
         </header>
         <main class="main">
+            <section class="item-section">
+                <div class="wrapper item-section__wrapper">
+                    <div class="item-section__content">
+                        <img src="./assets/img/item-img.jpg" alt="Грунт-эмаль полиуретановая «KOVALI®» 2К"
+                            class="item-section__content-img">
+                        <div class="item-section__text-content">
+                            <h2>
+                                описание
+                            </h2>
+                            <p>
+                                <a href="#">Грунт-эмаль полиуретановая «KOVALI®» 2К</a> предназначается для окраски
+                                и долговременной защиты не загрунтованных
+                                металлических конструкций в условиях промышленной атмосферы умеренно-холодного
+                                и холодного климата, в том числе
+                                подвергающихся повышенному истиранию. Применяется для защиты от коррозии стальных
+                                резервуаров, ёмкостей, трубопроводов
+                                для перевозки и хранения нефтепродуктов, индустриальных масел, опор ЛЭП, вышек сотовой
+                                связи, спецтехники: тракторов,
+                                кранов, бульдозеров, экскаваторов.
+                            </p>
+                            <h2>
+                                Характеристики
+                            </h2>
+                            <ul>
+                                <li>
+                                    Выдерживает перепад температур от — 60°C до+60°C
+                                </li>
+                                <li>
+                                    Время высыхания однослойного покрытия толщиной 25–35 мкм (по сухому слою)
+                                    при температуре (20±2)°С не более 4 часов,
+                                    а при температуре (80±2)°С не более 30 мин.
+                                </li>
+                                <li>
+                                    Окраска производится при температуре окружающей среды от +5°С до +35°С
+                                    и относительной влажности воздуха 80%.
+                                </li>
+                                <li>
+                                    Защищает от коррозии, влаги, паро — и воздухопроницаема, не выгорает, устойчива
+                                    к УФ.
+                                </li>
+                                <li>
+                                    Метод нанесения: кисть, валик, краскопульт
+                                </li>
+                                <li>
+                                    Теоретический расход на однослойное покрытие толщиной 25–35 мкм составит
+                                    80–100 г/м2 в зависимости от цвета.
+                                </li>
+                            </ul>
+                            <h2>
+                                Этапы окраски
+                            </h2>
+                            <ol>
+                                <li>
+                                    Подготовка поверхности: очистить от загрязнений, обезжирить растворителем KOVALI,
+                                    Р-4, Р-5 или ксилолом.
+                                </li>
+                                <li>
+                                    Компонент А тщательно перемешивают в течение 3-5 минут, затем вводят необходимое
+                                    количество компонента Б, перемешивают в
+                                    течение 2-3 минут, выдерживают 15-20 мин. При необходимости грунт-эмаль разбавляют
+                                    до рабочей вязкости растворителем
+                                    Р-5А или смесью ксилола и бутилацетата в соотношении 4:1. Грунт-эмаль после
+                                    разбавления вновь тщательно перемешивают и
+                                    фильтруют через сито или капроновую сетку с номинальным размером отверстий 100-200
+                                    мкм. Жизнеспособность грунт-эмали
+                                    после смешения компонентов при температуре (20±2)°С составляет не менее 5 часов.
+                                </li>
+                                <li>
+                                    Сварные швы, торцевые кромки, труднодоступных места, необходимо обработать
+                                    «полосовым слоем» кистью. При ручном
+                                    нанесении использовать кисти из натуральных волокон и безворсовые валики.
+                                </li>
+                                <li>
+                                    При перерывах в работе грунт-эмаль должна хранится в плотно закрытой таре, перед
+                                    началом работ снова тщательно
+                                    перемешать и выдержать 5-7 мин.
+                                </li>
+                                <li>
+                                    Окраска производится при температуре окружающей среды +5°С до +35°С и относительной
+                                    влажности воздуха &#60;80%. (Во время осадков, а также при сильном ветре
+                                    окрашивание
+                                    запрещено)</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="item-section__info">
+                        <h1 class="item-section__info-heading">
+                            Грунт-эмаль полиуретановая «KOVALI®» 2К
+                        </h1>
+                        <p class="item-section__price">
+                            16 300 ₽
+                        </p>
+                        <div class="item-section__info-item">
+                            <h2 class="item-section__info-item-heading">
+                                Блеск
+                            </h2>
+                            <div class="item-section__info-item-list">
+                                <a href="#" class="item-section__info-item-list-link active">
+                                    Матовая
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    Глянцевая
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    Полуглянцевая
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item-section__info-item">
+                            <h2 class="item-section__info-item-heading">
+                                Фасовка
+                            </h2>
+                            <div class="item-section__info-item-list">
+                                <a href="#" class="item-section__info-item-list-link active">
+                                    2,4 кг
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    8 кг
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    20 кг
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="item-section__info-color-link">
+                            +200 цветов RAL
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="contacts-section">
                 <div class="wrapper contacts-section__wrapper">
                     <div class="contacts-section__info">
