--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     О компании
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
-                    Новости
+                    Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
                     Дополнительно
@@ -62,7 +62,7 @@
                         О компании
                     </a>
                     <a href="#" class="header__nav-link">
-                        Новости
+                        Статьи
                     </a>
                     <a href="#" class="header__nav-link">
                         Дополнительно
@@ -159,7 +159,7 @@
                         <li
                             class="advantages-section__list-item advantages-section__list-item_count advantages-section__list-item_video">
                             <h4 class="advantages-section__list-item-subheading">
-                                Работаем <span class="advantages-section__list-item-count">
+                                Успешной работы <span class="advantages-section__list-item-count">
                                     15 лет
                                 </span>
                             </h4>
@@ -181,8 +181,8 @@
                         <li
                             class="advantages-section__list-item advantages-section__list-item_count advantages-section__list-item_image advantages-section__list-item_image-black">
                             <h4 class="advantages-section__list-item-subheading">
-                                Клиентов по всей России <span class="advantages-section__list-item-count">
-                                    48
+                                Корпоративных клиентов <span class="advantages-section__list-item-count">
+                                    97
                                 </span>
                             </h4>
                             <img src="./assets/img/advantages-map.svg" alt="" class="advantages-section__list-item-bg">
@@ -283,12 +283,39 @@
                     <ul class="dev-section__list">
                         <li class="dev-section__list-item">
                             <h5 class="dev-section__list-item-heading">
-                                Скорость высыхания
+                                Устойчивость
                             </h5>
                             <p class="dev-section__list-item-hidden-text">
                                 Стойкость покрытия к маслам, солям и щелочам
                             </p>
-                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                            <img src="./assets/img/ustoy.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Степень эластичность
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Уровень адаптации покрытия к коллебаниям температуры
+                            </p>
+                            <img src="./assets/img/elastic.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Состав пигментов
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Длительность сохранения декоративных качеств покрытия
+                            </p>
+                            <img src="./assets/img/pigments.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Уровень адгезиия
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Сила сцепления с поверхностью 
+                            </p>
+                            <img src="./assets/img/adgezia.png" alt="" class="dev-section__list-item-img">
                         </li>
                         <li class="dev-section__list-item">
                             <h5 class="dev-section__list-item-heading">
@@ -297,34 +324,7 @@
                             <p class="dev-section__list-item-hidden-text">
                                 Стойкость покрытия к маслам, солям и щелочам
                             </p>
-                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item">
-                            <h5 class="dev-section__list-item-heading">
-                                Скорость высыхания
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Стойкость покрытия к маслам, солям и щелочам
-                            </p>
-                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item">
-                            <h5 class="dev-section__list-item-heading">
-                                Скорость высыхания
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Стойкость покрытия к маслам, солям и щелочам
-                            </p>
-                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item">
-                            <h5 class="dev-section__list-item-heading">
-                                Скорость высыхания
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Стойкость покрытия к маслам, солям и щелочам
-                            </p>
-                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                            <img src="./assets/img/speed.png" alt="" class="dev-section__list-item-img">
                         </li>
                     </ul>
                 </div>
@@ -338,10 +338,10 @@
                         <div class="projects-section__tabs">
                             <div class="projects-section__tab active">
                                 <p class="text projects-section__tab-text">
-                                    Производство грузовых и грузопассажирских подъемников
+                                    Сеть бизнес-центров «Соты»
                                 </p>
                                 <p class="text projects-section__tab-subtext">
-                                    Г. Тула
+                                    Г. Санкт-Петербург
                                 </p>
                             </div>
                             <div class="projects-section__tab">
@@ -354,10 +354,10 @@
                             </div>
                             <div class="projects-section__tab">
                                 <p class="text projects-section__tab-text">
-                                    Сеть бизнес-центров «Соты»
+                                    Производство грузовых и грузопассажирских подъемников
                                 </p>
                                 <p class="text projects-section__tab-subtext">
-                                    Г. Санкт-Петербург
+                                    Г. Тула
                                 </p>
                             </div>
                         </div>
@@ -383,7 +383,7 @@
                         </div>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide projects-section__swiper-slide">
-                                <img src="./assets/img/slide-img1.jpg" alt="Окрашено KOVALI"
+                                <img src="./assets/img/slide-img3.jpg" alt="Окрашено KOVALI"
                                     class="projects-section__swiper-slide-img">
                             </div>
                             <div class="swiper-slide projects-section__swiper-slide">
