--- a/articles.html
+++ b/articles.html
@@ -17,7 +17,7 @@
                     О компании
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
-                    Новости
+                    Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
                     Дополнительно
@@ -62,7 +62,7 @@
                         О компании
                     </a>
                     <a href="#" class="header__nav-link">
-                        Новости
+                        Статьи
                     </a>
                     <a href="#" class="header__nav-link">
                         Дополнительно
@@ -124,57 +124,22 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide articles-section__swiper-slide">
                                 <a href="#" class="articles-section__date-filter-link active">
-                                    2007
+                                    2021
                                 </a>
                             </div>
                             <div class="swiper-slide articles-section__swiper-slide">
                                 <a href="#" class="articles-section__date-filter-link">
-                                    2008
+                                    2022
                                 </a>
                             </div>
                             <div class="swiper-slide articles-section__swiper-slide">
                                 <a href="#" class="articles-section__date-filter-link">
-                                    2009
+                                    2023
                                 </a>
                             </div>
                             <div class="swiper-slide articles-section__swiper-slide">
                                 <a href="#" class="articles-section__date-filter-link">
-                                    2010
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2011
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2012
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2013
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2014
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2015
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2016
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2017
+                                    2024
                                 </a>
                             </div>
                         </div>
