--- a/catalog-item.html
+++ b/catalog-item.html
@@ -16,7 +16,7 @@
                     О компании
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
-                    Новости
+                    Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
                     Дополнительно
@@ -61,7 +61,7 @@
                         О компании
                     </a>
                     <a href="#" class="header__nav-link">
-                        Новости
+                        Статьи
                     </a>
                     <a href="#" class="header__nav-link">
                         Дополнительно
@@ -117,6 +117,21 @@
             </div>
         </header>
         <main class="main">
+            <section class="navigation-section">
+                <div class="wrapper navigation-section__wrapper">
+                    <div class="breadcrumbs">
+                        <a href="#" class="breadcrumbs__link">
+                            Главная
+                        </a>
+                        <a href="#" class="breadcrumbs__link">
+                            Каталог
+                        </a>
+                        <a href="#" class="breadcrumbs__link active">
+                            Грунт-эмаль полиуретановая «KOVALI®» 2К
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="item-section">
                 <div class="wrapper item-section__wrapper">
                     <div class="item-section__row">
