--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
                     О компании
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
-                    Новости
+                    Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
                     Дополнительно
@@ -61,7 +61,7 @@
                         О компании
                     </a>
                     <a href="#" class="header__nav-link">
-                        Новости
+                        Статьи
                     </a>
                     <a href="#" class="header__nav-link">
                         Дополнительно
@@ -117,6 +117,18 @@
             </div>
         </header>
         <main class="main">
+            <section class="navigation-section">
+                <div class="wrapper navigation-section__wrapper">
+                    <div class="breadcrumbs">
+                        <a href="#" class="breadcrumbs__link">
+                            Главная
+                        </a>
+                        <a href="#" class="breadcrumbs__link active">
+                            Каталог
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="catalog-section">
                 <div class="wrapper catalog-section__wrapper">
                     <div class="catalog-section__filters">
@@ -133,103 +145,27 @@
                                         <label class="catalog-section__filter-label">
                                             <input type="checkbox" name="filter" id="" style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
+                                            Грунт-эмаль
                                         </label>
                                         <label class="catalog-section__filter-label">
                                             <input type="checkbox" name="filter" id="" style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
-                                            Термостойкие
+                                            Грунт
                                         </label>
                                         <label class="catalog-section__filter-label">
                                             <input type="checkbox" name="filter" id="" style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
+                                            Эмаль
                                         </label>
                                         <label class="catalog-section__filter-label">
                                             <input type="checkbox" name="filter" id="" style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="catalog-section__filter">
-                                    <div class="catalog-section__filter-header">
-                                        Тип продукта
-                                    </div>
-                                    <div class="catalog-section__filter-content">
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
+                                            Предварительная обработка
                                         </label>
                                         <label class="catalog-section__filter-label">
                                             <input type="checkbox" name="filter" id="" style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
-                                            Термостойкие
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="catalog-section__filter">
-                                    <div class="catalog-section__filter-header">
-                                        Тип продукта
-                                    </div>
-                                    <div class="catalog-section__filter-content">
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Термостойкие
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="catalog-section__filter">
-                                    <div class="catalog-section__filter-header">
-                                        Тип продукта
-                                    </div>
-                                    <div class="catalog-section__filter-content">
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Термостойкие
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
-                                        </label>
-                                        <label class="catalog-section__filter-label">
-                                            <input type="checkbox" name="filter" id="" style="display: none;">
-                                            <div class="catalog-section__filter-checkbox"></div>
-                                            Антикоррозийные
+                                            Сопутствующие товары
                                         </label>
                                     </div>
                                 </div>
